--- a/0x00-semantic_html/0-index.html
+++ b/0x00-semantic_html/0-index.html
@@ -1,1 +1,64 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>My Web Page</title>
+    <!-- Tailwind CSS CDN for styling -->
+    <script src="https://cdn.tailwindcss.com"></script>
+    <style>
+        /* Optional: Custom font for better aesthetics */
+        body {
+            font-family: "Inter", sans-serif;
+        }
+    </style>
+</head>
+<body class="min-h-screen flex flex-col bg-gray-100 text-gray-800">
 
+    <!-- Header Section -->
+    <header class="bg-blue-600 text-white p-4 shadow-md rounded-b-lg">
+        <nav class="container mx-auto flex justify-between items-center">
+            <a href="#" class="text-2xl font-bold rounded-md hover:text-blue-200 transition-colors">MySite</a>
+            <ul class="flex space-x-6">
+                <li><a href="#" class="hover:text-blue-200 transition-colors text-lg font-medium rounded-md px-3 py-1">Home</a></li>
+                <li><a href="#" class="hover:text-blue-200 transition-colors text-lg font-medium rounded-md px-3 py-1">About</a></li>
+                <li><a href="#" class="hover:text-blue-200 transition-colors text-lg font-medium rounded-md px-3 py-1">Services</a></li>
+                <li><a href="#" class="hover:text-blue-200 transition-colors text-lg font-medium rounded-md px-3 py-1">Contact</a></li>
+            </ul>
+        </nav>
+    </header>
+
+    <!-- Main Content Section -->
+    <main class="flex-grow container mx-auto p-6 my-8 bg-white shadow-lg rounded-lg">
+        <article class="prose max-w-none">
+            <h1 class="text-4xl font-extrabold text-blue-700 mb-6 pb-2 border-b-2 border-blue-200">Welcome to Our Amazing Page!</h1>
+            <section class="text-gray-700 leading-relaxed">
+                <p class="mb-4">
+                    This is the main content area of our web page. Here, you'll find interesting information, updates, and more about our services. We aim to provide a comprehensive and engaging experience for all our visitors.
+                </p>
+                <p class="mb-4">
+                    Our commitment is to deliver high-quality content and a seamless user experience. Feel free to explore the navigation links in the header to learn more about us and what we offer.
+                </p>
+                <h2 class="text-2xl font-semibold text-blue-600 mt-6 mb-3">About Our Services</h2>
+                <p class="mb-4">
+                    We offer a wide range of services tailored to meet your needs. From innovative solutions to reliable support, our team is dedicated to helping you achieve your goals.
+                </p>
+                <ul class="list-disc list-inside space-y-2">
+                    <li>Comprehensive consulting services</li>
+                    <li>Cutting-edge software development</li>
+                    <li>Dedicated customer support</li>
+                    <li>Regular updates and improvements</li>
+                </ul>
+            </section>
+        </article>
+    </main>
+
+    <!-- Footer Section -->
+    <footer class="bg-gray-800 text-white p-4 mt-8 shadow-inner rounded-t-lg">
+        <div class="container mx-auto text-center text-sm">
+            <p>&copy; 2025 MySite. All rights reserved.</p>
+        </div>
+    </footer>
+
+</body>
+</html>
